k8s/prod/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-app
  namespace: prod 
spec:
  selector:
    app: python-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
