k8s/prod/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: prod  # Change to prod for prod environment
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
