k8s/prod/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-app-ingress
  namespace: test  
spec:
  rules:
  - host: 340752816389.dkr.ecr.us-east-1.amazonaws.com
    http:
      paths:
      - path: /prod
        pathType: Prefix
        backend:
          service:
            name: python-app
            port:
              number: 80
